patch fixes bug 216752 [gtk2]tooltip make mozilla crash on Solaris. r=bryner sr=blizzard patched by robin.lu@sun.com